update app creation
